# libfit

./: CMakeLists.txt
fit/: CMakeLists.txt  fit_amoeba_solver.h  fit_function.h  fit_gauss.cpp  fit_gauss_init_function.h  fit_gaussian.h  fit_gradient_descent.h  fit_levenberg_marquardt.h  fit_linear_solver.h  fit_non_linear_solver.h  fit_radial_basis_function.h  fit_rosenbrock.h
fit/tests/: CMakeLists.txt  test_driver_gauss.cpp  test_driver_radial_basis.cpp  test_driver_svd.cpp  test_fit_amoeba_gauss.cpp  test_fit_amoeba_tanh.cpp  test_fit_lm_gauss.cpp  test_lm_solver.cpp
libfit/: CMakeLists.txt  readme.txt
libfit/fit/: fit_factory.cpp  fit_factory.h  fit_function.cpp  fit_gauss.h  fit_gaussian.cpp  fit_gradient_descent.cpp  fit_least_squares_function.h  fit_least_squares_init_function.h  fit_lm_solver.h  fit_radial_basis_function.cpp  fit_solver.h  fit_svd_solver.h  fit_tanh.cpp  fit_tanh.h  fit_tanh_init_function.h
libfit/fit/tests/: CMakeLists.txt  test_amoeba_solver.cpp  test_driver_amoeba.cpp  test_driver_fit_factory.cpp  test_driver_lm.cpp  test_driver_tanh.cpp  test_fit_factory_linear.cpp  test_fit_gauss.cpp  test_fit_lm_tanh.cpp  test_fit_radial_basis.cpp  test_fit_rosenbrock.cpp  test_fit_tanh.cpp  test_svd_solver.cpp
